re-center content on sidebar collapse/expand, fixes #9

--- a/projects/regisbooks/website/static/css/containers.css
+++ b/projects/regisbooks/website/static/css/containers.css
@@ -1,4 +1,11 @@
 .content {
-	margin-left: 16em;
+	margin-left: 15em;
 	padding: 1em;
+    transition: margin-left 0.5s ease, width 0.5s ease;
+}
+
+.content.centered {
+	margin-left: 5em;
+	margin-right: 1em;
+	transition: margin-left 0.7s ease, width 0.7s ease;
 }
