--- a/projects/regisbooks/website/static/css/sidebar.css
+++ b/projects/regisbooks/website/static/css/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
 	height: 100vh;
-	width: 250px;
+	width: 15em;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -11,7 +11,7 @@
 }
 
 .sidebar.collapsed {
-	width: 80px;
+	width: 4em;
 	background-color: var(--bs-primary);
 }
 
@@ -44,7 +44,7 @@
 
 .sidebar-toggle {
 	position: relative;
-	left: calc(100% + 10px); /* Move outside the sidebar */
+	left: calc(100% + 10px);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -60,7 +60,7 @@
 }
 
 .sidebar.collapsed .sidebar-toggle {
-	left: calc(80px + 10px); /* Adjust position for collapsed menu */
+	left: calc(60px + 10px);
 }
 
 .sidebar-toggle:hover {
